# cobot

cobot_control/: CMakeLists.txt  package.xml
cobot_control/config/: cobat_controller.yaml
cobot_control/launch/: controller.launch.py
cobot_controller/: CMakeLists.txt  cobot_control_plugin.xml  package.xml
cobot_controller/include/cobot_controller/: cobot_controller.hpp
cobot_controller/src/: cobot_controller.cpp  cobot_controller_parameter.yaml
cobot_description/: CMakeLists.txt  package.xml
cobot_description/launch/: display.launch.py
cobot_description/meshes/: base-v1.stl  finger_right-v1.stl  gripper_base-v1.stl  left_finger-v1.stl  part_1-v1.stl  part_2-v1.stl  part_3-v1.stl  part_4-v3.stl  part_5-v1.stl  part_6-v2.stl
cobot_description/rviz/: robot.rviz
cobot_description/urdf/: base.urdf.xacro  finger.urdf.xacro  gripper.urdf.xacro  main.xacro  part-1.urdf.xacro  part-2.urdf.xacro  part-3.urdf.xacro  part-4.urdf.xacro  part-5.urdf.xacro  part-6.urdf.xacro  ros2_control.xacro
cobot_gazebo/: CMakeLists.txt  package.xml
cobot_gazebo/launch/: gazebo.launch.py
cobot_interfaces/: CMakeLists.txt  package.xml
cobot_interfaces/action/: ForwardKinematic.action
